tests/snapshots/runtime_error_fixtures/base_map_callback_arity.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/base_map_callback_arity.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
• 1 error • examples/runtime_errors/base_map_callback_arity.flx
error[E004]: Undefined Variable

I can't find a value named `concat`.

  examples/runtime_errors/base_map_callback_arity.flx:2:29
  |
2 |     let ignored = map(#[1], concat)
  |                             ^^^^^^

Hint:
  Define it first: let concat = ...;
== jit ==
status: 1
stdout:
<empty>
stderr:
• 1 error • examples/runtime_errors/base_map_callback_arity.flx
error[E004]: Undefined Variable

I can't find a value named `concat`.

  examples/runtime_errors/base_map_callback_arity.flx:2:29
  |
2 |     let ignored = map(#[1], concat)
  |                             ^^^^^^

Hint:
  Define it first: let concat = ...;
